2008-11-02  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala:
	* vapi/glib-2.0.vapi:

	Return the right D-Bus type signature for GHashTable,
	patch by Marc-André Lureau

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:
	* gobject/valaccodemethodmodule.vala:

	Add partial support for calling coroutines from other coroutines

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* vala/valamethodtype.vala:
	* gobject/valaccodegenerator.vala:

	Add member `begin' to coroutines

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valaattributeprocessor.vala:
	* vala/valaclass.vala:
	* vala/valaenum.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valastruct.vala:
	* compiler/valacompiler.vala:
	* vapigen/valagidlparser.vala:
	* vapigen/valavapigen.vala:

	Move attribute processing to semantic analyzer

2008-11-01  Jürg Billeter  <j@bitron.ch>

	* vala/valamethod.vala:
	* ccode/valaccodeblock.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaccodemodule.vala:

	Add experimental support for yield statements and coroutines

2008-11-01  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodecasestatement.vala:
	* ccode/valaccodeswitchstatement.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valagobjectclassmodule.vala:

	Support more flexible C switch statements

2008-11-01  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valacfgbuilder.vala:
	* vala/valacodevisitor.vala:
	* vala/valamethod.vala:
	* vala/valanullchecker.vala:
	* vala/valaparser.vala:
	* vala/valascanner.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasymbolresolver.vala:
	* vala/valatokentype.vala:
	* vala/valayieldstatement.vala:
	* gobject/valaccodegenerator.vala:

	Parse yield statements

2008-10-31  Jürg Billeter  <j@bitron.ch>

	* vala/valaproperty.vala: